--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-rnd": "^10.4.14"
+    "react-rnd": "^10.4.14",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
